# wilder-web

./: .dockerignore  .gitignore  ASSETS_ATTRIBUTION.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  render.yaml
.cargo/: config.toml
.github/workflows/: deploy.yml
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/public/citymap/: manifest.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/assets/: audio.ts  catalog.ts
apps/web/src/dev/: AssetLab.tsx  AssetViewport.tsx  BuildingStage.tsx  BuildingStageViewport.tsx  Sidekick.tsx  assetlab.css  labApi.ts  stagePrefabs.ts
apps/web/src/game/: citymap.ts  collision.ts  interact.ts  interiors.ts  poi.ts  recipes.ts  scale.ts  territory.ts
apps/web/src/mobile/: AgentsTab.tsx  BottomSheet.tsx  EconomyTab.tsx  MapTab.tsx  MobileShell.tsx  StubPanel.tsx  TabBar.tsx  TradeTab.tsx  WatchTab.tsx  lifecycle.ts  mobile.css  useIsMobile.ts
apps/web/src/net/: connection.ts  protocol.ts
apps/web/src/perf/: AdaptiveQuality.tsx  PerfTracker.tsx  gpuTimer.ts  perf.ts  quality.ts
apps/web/src/render/: Atmosphere.tsx  Buildings.tsx  CameraRig.tsx  Chunks.tsx  CityProxy.tsx  CombatFx.tsx  Entities.tsx  FollowCamera.tsx  GameCanvas.tsx  Ground.tsx  InstancedKit.tsx  Interior.tsx  Ocean.tsx  PlayerInput.tsx  Props.tsx  TargetReticle.tsx  building.ts  chunkBuilder.ts  facade.ts  groundShader.ts  importedBuilding.ts  itemSprite.tsx  roadMarkings.ts  styles.ts
apps/web/src/state/: game.ts  session.ts
apps/web/src/ui/: AgentsScreen.tsx  CharacterSelect.tsx  ChatWindow.tsx  EconomyDashboard.tsx  Game.tsx  GameMenu.tsx  HoloMap.tsx  Hud.tsx  InventoryScreen.tsx  ItemIcon.tsx  Login.tsx  MapOverlay.tsx  Minimap.tsx  PerfPanel.tsx  ProductionMap.tsx  TradeChart.tsx  TradeScreen.tsx  format.ts  holoGround.worker.ts  theme.css  tradechart.css  useAgents.tsx  useWildUsd.ts  watch.tsx
assets/: manifest.json
assets/models/: character.glb
assets/models/imported/: sm_3dbillboard01.glb  sm_3dbillboard03.glb  sm_ac01.glb  sm_ac02.glb  sm_aircon.glb  sm_barrier01.glb  sm_barrier08.glb  sm_bench01.glb  sm_billboard02.glb  sm_billboard27.glb  sm_bin_001.glb  sm_bush_1.glb  sm_cb01_module01.glb  sm_cb01_module02.glb  sm_cb01_module03.glb  sm_cb01_module04.glb  sm_cb01_module05.glb  sm_cb01_module06.glb  sm_cb01_module07.glb  sm_cb01_module08.glb  sm_cb01_module09.glb  sm_cb01_module10.glb  sm_cb01_module11.glb  sm_cb01_module12.glb  sm_cb01_module14.glb  sm_cb01_module15.glb  sm_cb01_module16.glb  sm_cb01_module17.glb  sm_cb01_module18.glb  sm_cb01_module19.glb  sm_cb01_storefront01.glb  sm_cb03_09.glb  sm_citybarrels_01.glb  sm_cpticketmachine01.glb  sm_cyberbarrels01.glb  sm_floor_one_l.glb  sm_floor_one_r.glb  sm_floor_three_l.glb  sm_floor_three_r.glb  sm_floor_two_l.glb  (+30 more)
crates/exchange/wilder-exchange/: Cargo.toml
crates/exchange/wilder-exchange-asset/: Cargo.toml
crates/exchange/wilder-exchange-asset/src/: lib.rs
crates/exchange/wilder-exchange-book/: Cargo.toml
crates/exchange/wilder-exchange-data/: Cargo.toml
crates/exchange/wilder-exchange-data/src/: lib.rs
crates/exchange/wilder-exchange-settle/: Cargo.toml
crates/exchange/wilder-exchange/src/: lib.rs
crates/wilder-ai/: Cargo.toml
crates/wilder-ai/src/: lib.rs
crates/wilder-auth/: Cargo.toml
crates/wilder-auth/src/: lib.rs
crates/wilder-combat/: Cargo.toml
crates/wilder-combat/src/: lib.rs
crates/wilder-crafting/: Cargo.toml
crates/wilder-crafting/src/: lib.rs
crates/wilder-economy/: Cargo.toml
crates/wilder-economy/src/: lib.rs
crates/wilder-gateway/: Cargo.toml
crates/wilder-gateway/src/: http.rs  main.rs  ws.rs
crates/wilder-inventory/: Cargo.toml
crates/wilder-inventory/src/: lib.rs
crates/wilder-market/: Cargo.toml
crates/wilder-market/src/: lib.rs
crates/wilder-pathfinding/: Cargo.toml
crates/wilder-pathfinding/src/: lib.rs
crates/wilder-persistence/: Cargo.toml
crates/wilder-persistence/src/: lib.rs  rocks.rs
crates/wilder-physics/: Cargo.toml
crates/wilder-physics/src/: lib.rs
crates/wilder-replication/: Cargo.toml
crates/wilder-replication/src/: lib.rs
crates/wilder-sim/: Cargo.toml
crates/wilder-sim/src/: agents.rs  main.rs  market.rs  report.rs
crates/wilder-telemetry/: Cargo.toml
crates/wilder-telemetry/src/: lib.rs
crates/wilder-terrain/: Cargo.toml
crates/wilder-terrain/assets/: districts.json
crates/wilder-terrain/src/: lib.rs
crates/wilder-world/: Cargo.toml
crates/wilder-world/src/: agents.rs  chunks.rs  districts.rs  factions.rs  ledger.rs  lib.rs  market_stats.rs  npc.rs  stats.rs
shared/wilder-protocol/: Cargo.toml
shared/wilder-protocol/src/: lib.rs
shared/wilder-types/: Cargo.toml
shared/wilder-types/src/: lib.rs
specs/: spec-mvp.md
tools/: build-character.mjs  e2e.mjs  glb-probe.html  list-ual-clips.mjs  probe-buildings.mjs  probe-cards.mjs  probe-clicks.mjs  probe-console.mjs  probe-corner-plan.mjs  probe-create.mjs  probe-fps.mjs  probe-glb-normals.mjs  probe-glb-winding.mjs  probe-hlod-debug.mjs  probe-hlod.mjs  probe-join.mjs  probe-module-depth.mjs  probe-module-mats.mjs  probe-module-texnames.mjs  probe-module-tris.mjs  probe-module-uvs.mjs  probe-motion.mjs  probe-perf.mjs  probe-prop-positions.mjs  probe-shoot.mjs  probe-spine.mjs  probe-street-details.mjs  screenshot-assetlab-variants.mjs  screenshot-assetlab.mjs  screenshot-b.mjs  screenshot-c.mjs  screenshot.mjs  shot-building-stage.mjs  shot-character.mjs  shot-debug-5175.mjs  shot-debug-scene.mjs  shot-freecam.mjs  shot-glb-probe.mjs  shot-hud-restyle.mjs  shot-instanced-props.mjs  (+15 more)
tools/asset-lab/: extract.mjs  import.mjs  optimize.mjs  paths.mjs  probe-bounds.mjs  probe-components.mjs  probe-facing.mjs  probe-submeshes.mjs  promote.mjs  recipes.mjs  registry.mjs  server.mjs  stage-shot.mjs
tools/asset-lab/blender/: import_asset.py  optimize_asset.py  probe_assembly.py  probe_corner_normals.py  probe_corner_walls.py  probe_mat_uvs.py  probe_occupancy.py  probe_walls.py
tools/citymap/: bake.mjs  verify-scale.mjs
tools/deploy/: build-and-push.ps1
(+2 files in other folders)
