[package]
name = "wilder-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-types = { workspace = true }
wilder-protocol = { workspace = true }
wilder-persistence = { workspace = true }
wilder-auth = { workspace = true }
wilder-world = { workspace = true }
wilder-telemetry = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
