[package]
name = "wilder-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
