[package]
name = "wilder-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-types = { workspace = true }
wilder-crafting = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
