[package]
name = "wilder-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-types = { workspace = true }
wilder-protocol = { workspace = true }
wilder-persistence = { workspace = true }
wilder-terrain = { workspace = true }
wilder-physics = { workspace = true }
wilder-pathfinding = { workspace = true }
wilder-inventory = { workspace = true }
wilder-replication = { workspace = true }
wilder-combat = { workspace = true }
wilder-ai = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
tempfile = "3"
