[package]
name = "wilder-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-types = { workspace = true }
wilder-protocol = { workspace = true }
wilder-persistence = { workspace = true }
wilder-terrain = { workspace = true }
wilder-physics = { workspace = true }
wilder-pathfinding = { workspace = true }
wilder-inventory = { workspace = true }
wilder-replication = { workspace = true }
wilder-combat = { workspace = true }
wilder-ai = { workspace = true }
wilder-economy = { workspace = true }
wilder-crafting = { workspace = true }
wilder-market = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
smallvec = "1"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
