[package]
name = "wilder-exchange-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wilder-exchange-asset = { workspace = true }
wilder-exchange-book = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
wilder-types = { workspace = true }
serde_json = { workspace = true }
